<resources>
    <string name="app_name">neighbours</string>
    <string name="person_icon">Avatar</string>
    <string name="hint_name">Nom</string>
    <string name="hint_avatar">URL Avatar</string>
    <string name="hint_phone">Telephone</string>
    <string name="hint_website">Site web</string>
    <string name="hint_address">Addresse</string>
    <string name="hint_about">A propos</string>
    <string name="hint_favorite">Favoris</string>
    <string name="hint_save">Enregistrer</string>

    <string name="add_neighbor">Nouveau voisin</string>
    <string name="list_neighbor">Liste des voisins</string>
</resources>